NXP-22770: Take into account the code review - PR